# cxx2flow

./: .gitignore  Cargo.toml  LICENSE  README-en.md  README.md  build.rs  gallery.md  index.js  justfile  package.json  test.cpp  webpack.config.js
.github/workflows/: build.yml  ci.yml  pages.yml
assets/: cpp.c  extra-semicolon.cpp  large.cpp  rangefor.cpp  switch.c  test.cpp  tree-sitter-cpp.wasm  wc.c
scripts/: clang-wasm.cmd  clang-wasm.sh  wasm-smoke.mjs
src/: ast.rs  cli.rs  counter.rs  dot.rs  dump.rs  error.rs  graph.rs  language.rs  lib.rs  main.rs  parser.rs  tikz.rs  wasm.rs  wasm_sysroot.rs
src/display/: d2.rs  dot.rs  mod.rs  tikz.rs
tests/: snapshot_integration.rs  tree_sitter_contract.rs  tree_sitter_contract_cpp.rs
tests/fixtures/: syntax_contract.c  syntax_contract_cpp.cpp
tests/fixtures/errors/: unexpected_break.c  unexpected_continue.c
tests/fixtures/snapshots/: class_method_and_main.cpp  compound_nested_blocks.c  compound_with_comments.c  do_while.c  else_if_chain.cpp  empty_statement_cleanup.c  enum_class_switch.cpp  for_decl_condition_update_expr.c  for_loop.c  for_missing_init_cond_upd.c  goto_backward_label.c  goto_forward_label.c  if_else.cpp  if_without_else.c  labeled_loop_continue.c  lambda_in_statement.cpp  linear_return.cpp  multi_function_pick_second__bar.c  namespace_function__solve.cpp  nested_branches.cpp  nested_loop_mix.c  nested_namespace_function__work.cpp  range_for.cpp  range_for_const_ref.cpp  range_for_initializer.cpp  select_other_function__helper.cpp  stacked_labels.c  switch_char_literal.c  switch_comment_and_fallthrough.c  switch_default_middle.c  (+9 more)
tests/snapshots/: snapshot_integration__d2__class_method_and_main.snap  snapshot_integration__d2__compound_nested_blocks.snap  snapshot_integration__d2__compound_with_comments.snap  snapshot_integration__d2__do_while.snap  snapshot_integration__d2__else_if_chain.snap  snapshot_integration__d2__empty_statement_cleanup.snap  snapshot_integration__d2__enum_class_switch.snap  snapshot_integration__d2__for_decl_condition_update_expr.snap  snapshot_integration__d2__for_loop.snap  snapshot_integration__d2__for_missing_init_cond_upd.snap  snapshot_integration__d2__goto_backward_label.snap  snapshot_integration__d2__goto_forward_label.snap  snapshot_integration__d2__if_else.snap  snapshot_integration__d2__if_without_else.snap  snapshot_integration__d2__labeled_loop_continue.snap  snapshot_integration__d2__lambda_in_statement.snap  snapshot_integration__d2__linear_return.snap  snapshot_integration__d2__multi_function_pick_second.snap  snapshot_integration__d2__namespace_function.snap  snapshot_integration__d2__nested_branches.snap  snapshot_integration__d2__nested_loop_mix.snap  snapshot_integration__d2__nested_namespace_function.snap  snapshot_integration__d2__range_for.snap  snapshot_integration__d2__range_for_const_ref.snap  snapshot_integration__d2__range_for_initializer.snap  snapshot_integration__d2__select_other_function.snap  snapshot_integration__d2__stacked_labels.snap  snapshot_integration__d2__switch_char_literal.snap  snapshot_integration__d2__switch_comment_and_fallthrough.snap  snapshot_integration__d2__switch_default_middle.snap  snapshot_integration__d2__switch_empty_body.snap  snapshot_integration__d2__switch_multiple_fallthrough.snap  snapshot_integration__d2__switch_negative_case.snap  snapshot_integration__d2__switch_with_default.snap  snapshot_integration__d2__switch_without_default.snap  snapshot_integration__d2__template_function.snap  snapshot_integration__d2__try_catch_statements.snap  snapshot_integration__d2__while_continue_break.snap  snapshot_integration__d2__while_simple.snap  snapshot_integration__dot_curly__else_if_chain.snap  (+63 more)
wasm-sysroot/: assert.h  ctype.h  endian.h  inttypes.h  limits.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  unistd.h  wchar.h  wctype.h
wasm-sysroot/src/: ctype.c  stdio.c  stdlib-symbols.txt  stdlib.c  string.c  wctype.c
wasm-sysroot/sys/: types.h
web/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css
(+8 files in other folders)
