[package]
name = "cxx2flow"
version = "0.6.2"
edition = "2021"
authors = ["mgt <mgt@oi-wiki.org>"]
description = "Convert your C/C++ code to control flow chart"
license = "MIT"
repository = "https://github.com/Enter-tainer/cxx2flow"
include = ["src/**/*", "LICENSE", "README.md", "build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cxx2flow"
path = "src/main.rs"

[lib]
name = "cxx2flow"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
thiserror = "1.0"
log = "0.4.22"
tree-sitter = "0.22.6"
tree-sitter-cpp = { version = "0.22.3" }
petgraph = "0.6.5"
itertools = "0.13.0"
hash-chain = "0.3.2"
enum_dispatch = "0.3.13"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
colored = "2.1.0"
miette = { version = "7.2.0", features = ["fancy"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "=0.2.89"
miette = "7.2.0"

[build-dependencies]
anyhow = "1.0"
cc = "1.2"
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "git2",
  "rustc",
] }
[profile.release]
lto = "fat"
